--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,11 @@
     src: url('/fonts/ArchivoBlack-Regular.ttf');
 }
 
+@font-face {
+    font-family: 'upheaval';
+    src: url('/fonts/upheaval.ttf');
+}
+
 html {
     scroll-behavior: smooth;
 }
