Change font and footer

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,8 +13,8 @@
 }
 
 @font-face {
-    font-family: 'upheaval';
-    src: url('/fonts/upheaval.ttf');
+    font-family: 'chicago';
+    src: url('/fonts/Chicago.ttf');
 }
 
 html {
